--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet restore
 
       - name: Publish API Project
-        run: dotnet publish path/to/WebAPI.csproj --configuration Release --output ./publish_output
+        run: dotnet publish WebAPI/WebAPI.csproj --configuration Release --output ./publish_output
         # This will publish only the necessary files to the ./publish_output folder
 
       - name: Build application
