--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -24,15 +24,15 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
 
-      - name: Publish API Project
-        run: dotnet publish WebAPI/WebAPI.csproj --configuration Release --output ./publish_output
-        # This will publish only the necessary files to the ./publish_output folder
-
       - name: Build application
         run: dotnet build --no-restore
 
       - name: Run tests
         run: dotnet test --no-build --verbosity normal
+
+      - name: Publish API Project
+        run: dotnet publish WebAPI/WebAPI.csproj --configuration Release --output ./publish_output
+        # This will publish only the necessary files to the ./publish_output folder
 
   deploy:
     needs: build
@@ -52,4 +52,4 @@ jobs:
         with:
           app-name: "DotNetCoreAzureGitHubApp"
           slot-name: "production"
-          package: .
+          package: ./publish_output  # Deploys only the Web API publish output
