--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -34,6 +34,12 @@ jobs:
         run: dotnet publish WebAPI/WebAPI.csproj --configuration Release --output ./publish_output
         # This will publish only the necessary files to the ./publish_output folder
 
+      - name: Upload publish_output as an artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: publish-output
+          path: ./publish_output
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -41,6 +47,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Download publish_output artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: publish-output
 
       - name: Login to Azure
         uses: azure/login@v1
