--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -52,6 +52,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: publish-output
+          path: ./publish_output
+
+      - name: List downloaded files for verification
+        run: ls -R ./publish_output  # List the files in the downloaded folder to verify the structure
+
 
       - name: Login to Azure
         uses: azure/login@v1
